handlers are deaclared
created rabbitMq queue, waiting exchange and producer

--- a/DelayedNotifier/builds/docker-compose.yaml
+++ b/DelayedNotifier/builds/docker-compose.yaml
@@ -21,6 +21,18 @@ services:
       timeout: 10s
       retries: 3
 
+  redis:
+    image: redis:alpine
+    container_name: redis
+    restart: always
+    environment:
+      - REDIS_PASSWORD=password
+    command: redis-server --requirepass $$REDIS_PASSWORD --bind 0.0.0.0
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./data:/data
+
 volumes:
   rabbitmq_data:
   rabbitmq_logs:
