--- a/DelayedNotifier/builds/docker-compose.yaml
+++ b/DelayedNotifier/builds/docker-compose.yaml
@@ -23,11 +23,11 @@ services:
 
   redis:
     image: redis:alpine
-    container_name: redis
+    container_name: redisdb
     restart: always
     environment:
       - REDIS_PASSWORD=password
-    command: redis-server --requirepass $$REDIS_PASSWORD --bind 0.0.0.0
+    command: redis-server --requirepass password --bind 0.0.0.0
     ports:
       - "6379:6379"
     volumes:
